--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
 	<title>GreenScan</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link href="https://fonts.googleapis.com/css2?family=Lateef:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lateef:wght@200;300;400;500;600;700;800&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
 	<noscript>
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/noscript.css') }}"/>
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/noscript.css') }}" />
 	</noscript>
 </head>
 
@@ -28,7 +29,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>GreenScan</h1>
-					<p class="lateef-regular">رفيقك الذكي لصحة النباتات  🌿.. </p>
+					<p class="lateef-regular">رفيقك الذكي لصحة النباتات 🌿.. </p>
 				</div>
 			</div>
 			<nav>
@@ -36,7 +37,6 @@
 					<li><a href="#intro"> عن الموقع</a></li>
 					<li><a href="#upload">رفع الصورة</a></li>
 					<li><a href="#work">الأرشيف </a></li>
-					<!-- <li><a href="#about">التشخيصات السابقة</a></li> -->
 				</ul>
 			</nav>
 		</header>
@@ -48,10 +48,11 @@
 				<h2 class="major lateef-regular">نبذة عن الموقع</h2>
 				<span class="image main"><img src="/static/images/pic02.png" alt="" /></span>
 				<p class="lateef-regular">
-					GreenScan هو رفيقك الذكي لصحة النباتات 🌿.  
-					يساعدك الموقع على اكتشاف أمراض وآفات النباتات من خلال تحليل صور الأوراق باستخدام الذكاء الاصطناعي.  
-					يوفّر لك تشخيصًا دقيقًا للحالة الصحية للنبات، مما يسهّل عليك العناية بنباتاتك في الوقت المناسب وبشكل فعّال.
-				  </p>
+					GreenScan هو رفيقك الذكي لصحة النباتات 🌿.
+					يساعدك الموقع على اكتشاف أمراض وآفات النباتات من خلال تحليل صور الأوراق باستخدام الذكاء الاصطناعي.
+					يوفّر لك تشخيصًا دقيقًا للحالة الصحية للنبات، مما يسهّل عليك العناية بنباتاتك في الوقت المناسب وبشكل
+					فعّال.
+				</p>
 			</article>
 
 			<!-- Work -->
@@ -60,32 +61,36 @@
 				<div class="container">
 					<ul class="list">
 						{% for item in items %}
-						<li class="item" >
-						  <div class="card">
-							<div class="card-title">{{ item.disease }}</div>
-							<div class="card-info">
-							  {{ item.symptom }}
+						<li class="item">
+							<div class="card">
+								<div class="card-title">{{ item.disease }}</div>
+								<div class="card-info">
+									<p><strong>اسم النبتة:</strong> {{ item.plant_name }}</p>
+								</div>
+
+								<div class="card-photo">
+									<img class="card-img"
+										src="{{ url_for('static', filename='uploads/' ~ item.image) }}"
+										alt="صورة النبات">
+								</div>
 							</div>
-							<div class="card-photo">
-							  <img class="card-img" src="{{ url_for('static', filename='uploads/' ~ item.image) }}" alt="صورة النبات">
-							</div>
-						  </div>
 						</li>
 						{% endfor %}
-					  </ul>
-					  
-				  </div>
-				  
+					</ul>
+
+				</div>
+
 			</article>
 
 			<!-- Contact -->
 			<article id="upload">
 				<h2 class="major">رفع الصورة </h2>
 				<form id="plant-form">
-					<div class="fields">
-						<div class="field">
-							<label for="plant-image">ارفع صورة النبات</label>
-							<input type="file" id="plant-image" accept="image/*" required />
+					<div class="file-upload">
+						<div class="file-select">
+							<div class="file-select-button" id="fileName">اختر صورة</div>
+							<div class="file-select-name" id="noFile">لم يتم اختيار أي صورة...</div>
+							<input type="file" name="image" id="plant-image" required>
 						</div>
 					</div>
 					<ul class="actions">
@@ -93,9 +98,8 @@
 					</ul>
 				</form>
 
-				<div id="result" style="margin-top: 20px; color: #fff;"></div>
+				<div id="result" class="diagnosis-result "></div>
 
-				<!-- يمكنك لاحقًا إضافة أيقونات التواصل هنا إذا أردت -->
 			</article>
 
 			<!-- Elements -->
@@ -108,7 +112,8 @@
 						<em>emphasized</em>.
 						This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 						This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a
-							href="#">this is a link</a>.</p>
+							href="#">this is a link</a>.
+					</p>
 					<hr />
 					<h2>Heading Level 2</h2>
 					<h3>Heading Level 3</h3>
@@ -366,6 +371,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="{{ url_for('static', filename='js/util.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/plant-diagnosis.js') }}"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
 
 
 </body>
